probes/main/default/objects/SMF12_Room_Grant__c/SMF12_Room_Grant__c.object-meta.xml
<CustomObject>
    <description>SMF-12: one row per (Case, User) holding an unexpired live-sync room token, so SMF12_AccessSweep can push a revocation when that user loses access. No token is stored. Server-side only.</description>
    <label>SMF12 Room Grant</label>
    <nameField>
        <displayFormat>G-{000000}</displayFormat>
        <label>SMF12 Room Grant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMF12 Room Grants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>