probes/main/default/objects/SMF12_Room_Grant__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case whose markup room the token admits to.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>SMF12_Room_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>