probes/main/default/objects/SMF12_Room_Grant__c/fields/ExpiresAt__c.field-meta.xml
<CustomField>
    <fullName>ExpiresAt__c</fullName>
    <description>Expiry of the latest token issued for this (Case, User).</description>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>