probes/main/default/objects/SMF12_Room_Grant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User the room token was issued to.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SMF12_Room_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>